<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

   <ImageView
       android:id="@+id/img1"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"

       android:src="@drawable/icon1"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintStart_toEndOf="parent"
       tools:ignore="ContentDescription" />
    <TextView
        android:id="@+id/intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intro"
        android:textStyle="italic"

        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img1"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/sinin"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/signIn"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/intro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="@color/corail"/>
    <Button
        android:id="@+id/signUp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/signUp"

        android:backgroundTint="@color/corail"
        app:layout_constraintTop_toBottomOf="@id/sinin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>